crates/argvtype-syntax/src/snapshots/argvtype_syntax__lower__tests__annotated_function.snap
---
source: crates/argvtype-syntax/src/lower.rs
expression: result.source_unit
---
source_id: 0
annotations: []
items:
  - Function:
      id: 0
      span:
        start: 63
        end: 142
      name: deploy
      body:
        - Assignment:
            id: 1
            span:
              start: 116
              end: 128
            name: cfg
            value:
              span:
                start: 126
                end: 128
              segments:
                - ParamExpand:
                    span:
                      start: 126
                      end: 128
                    name: "1"
                    operator: ~
                    operand: ~
            decl_kind: Local
            flags: []
            array_value: ~
        - Command:
            id: 2
            span:
              start: 131
              end: 140
            name:
              span:
                start: 131
                end: 135
              segments:
                - Literal: echo
            args:
              - span:
                  start: 136
                  end: 140
                segments:
                  - Literal: done
            redirects: []
      annotations:
        - span:
            start: 0
            end: 62
          directive:
            Sig:
              name: deploy
              params:
                - name: cfg
                  type_expr:
                    Parameterized:
                      name: Scalar
                      param:
                        Named: ExistingFile
              return_type:
                Status: "0"
              effects:
                - name: may_exec
                  span:
                    start: 0
                    end: 62
        - span:
            start: 76
            end: 89
          directive:
            Bind:
              positional: $1
              name: cfg
              variadic: false
        - span:
            start: 92
            end: 113
          directive:
            Bind:
              positional: $2
              name: manifests
              variadic: true
