crates/argvtype-syntax/src/snapshots/argvtype_syntax__lower__tests__array_expansion.snap
---
source: crates/argvtype-syntax/src/lower.rs
expression: result.source_unit
---
source_id: 0
annotations: []
items:
  - Statement:
      Command:
        id: 0
        span:
          start: 0
          end: 16
        name:
          span:
            start: 0
            end: 4
          segments:
            - Literal: echo
        args:
          - span:
              start: 5
              end: 16
            segments:
              - DoubleQuoted:
                  - ArrayExpand:
                      span:
                        start: 6
                        end: 15
                      name: arr
                      subscript: At
        redirects: []
