crates/argvtype-syntax/src/snapshots/argvtype_syntax__lower__tests__assignment.snap
---
source: crates/argvtype-syntax/src/lower.rs
expression: result.source_unit
---
source_id: 0
annotations: []
items:
  - Statement:
      Assignment:
        id: 0
        span:
          start: 0
          end: 7
        name: FOO
        value:
          span:
            start: 4
            end: 7
          segments:
            - Literal: bar
        decl_kind: ~
        flags: []
        array_value: ~
