crates/argvtype-syntax/src/snapshots/argvtype_syntax__lower__tests__echo_hello.snap
---
source: crates/argvtype-syntax/src/lower.rs
expression: result.source_unit
---
source_id: 0
annotations: []
items:
  - Statement:
      Command:
        id: 0
        span:
          start: 0
          end: 16
        name:
          span:
            start: 0
            end: 4
          segments:
            - Literal: echo
        args:
          - span:
              start: 5
              end: 10
            segments:
              - Literal: hello
          - span:
              start: 11
              end: 16
            segments:
              - Literal: world
        redirects: []
