crates/argvtype-syntax/src/snapshots/argvtype_syntax__lower__tests__function.snap
---
source: crates/argvtype-syntax/src/lower.rs
expression: result.source_unit
---
source_id: 0
annotations: []
items:
  - Function:
      id: 0
      span:
        start: 0
        end: 20
      name: greet
      body:
        - Command:
            id: 1
            span:
              start: 10
              end: 17
            name:
              span:
                start: 10
                end: 14
              segments:
                - Literal: echo
            args:
              - span:
                  start: 15
                  end: 17
                segments:
                  - Literal: hi
            redirects: []
      annotations: []
