crates/argvtype-syntax/src/snapshots/argvtype_syntax__lower__tests__param_expansion.snap
---
source: crates/argvtype-syntax/src/lower.rs
expression: result.source_unit
---
source_id: 0
annotations: []
items:
  - Statement:
      Command:
        id: 0
        span:
          start: 0
          end: 20
        name:
          span:
            start: 0
            end: 4
          segments:
            - Literal: echo
        args:
          - span:
              start: 5
              end: 20
            segments:
              - DoubleQuoted:
                  - ParamExpand:
                      span:
                        start: 6
                        end: 19
                      name: x
                      operator: Default
                      operand:
                        span:
                          start: 11
                          end: 18
                        segments:
                          - Literal: default
        redirects: []
